--- a/tablica-frontend/src/styles.scss
+++ b/tablica-frontend/src/styles.scss
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'bootstrap/scss/bootstrap';
+@import "bootstrap-icons/font/bootstrap-icons.css";
+
+.bg-gray-100 {
+  background-color: #f8f9fa !important;
+}
