--- a/tablica-frontend/src/app/components/header/header.component.html
+++ b/tablica-frontend/src/app/components/header/header.component.html
@@ -13,6 +13,8 @@
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
         <li><a class="dropdown-item" [routerLink]="['/my-offers']">My offers</a></li>
         <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" [routerLink]="['/contact-data']">Contact data</a></li>
+        <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" [routerLink]="['/auth']" (click)="logout($event)">Logout</a></li>
       </ul>
     </div>
