--- a/tablica-frontend/src/app/components/offer-list/offer-list.component.html
+++ b/tablica-frontend/src/app/components/offer-list/offer-list.component.html
@@ -66,7 +66,7 @@
 
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
     <div class="col" *ngFor="let offer of filteredOffers">
-      <a [routerLink]="['/offers', offer.offerId]" class="text-decoration-none text-dark">
+      <a [routerLink]="['/offers', offer.offerId, 'details']" class="text-decoration-none text-dark">
         <div class="card h-100">
           <div class="card-header d-flex justify-content-between align-items-center">
             <h5 class="card-title mb-0 text-truncate">{{ offer.title }}</h5>
