--- a/tablica-frontend/src/app/components/offer-list/offer-list.component.scss
+++ b/tablica-frontend/src/app/components/offer-list/offer-list.component.scss
@@ -52,16 +52,16 @@
     align-items: center;
   }
 
-  &:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  }
-
   .card-title {
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
   }
+}
+
+.card.offer:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .contact-info {
