--- a/tablica-frontend/src/app/components/offer-detail/offer-detail.component.html
+++ b/tablica-frontend/src/app/components/offer-detail/offer-detail.component.html
@@ -44,14 +44,13 @@
         <!-- Zdjęcia -->
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title fw-bold mb-3">Images</h5>
             <div class="image-gallery position-relative">
               <div *ngIf="offer.images.length === 0" class="text-center py-5 bg-light">
                 <i class="bi bi-image display-4 text-muted"></i>
                 <p class="mt-3 text-muted">No images</p>
               </div>
               <div *ngIf="offer.images.length > 0" class="main-image-container">
-                <img [src]="offer.images[currentImageIndex]" class="img-fluid rounded" alt="Offer Image">
+                <img [src]="getImageUrl(currentImageIndex)" class="img-fluid rounded" alt="Offer Image">
                 <div class="navigation-buttons" *ngIf="offer.images.length > 1">
                   <button class="btn btn-light btn-sm" (click)="prevImage()">
                     <i class="bi bi-chevron-left"></i>
@@ -61,12 +60,12 @@
                   </button>
                 </div>
               </div>
-              <div class="image-thumbnails d-flex mt-3 overflow-auto" *ngIf="offer.images.length > 1">
-                <div *ngFor="let image of offer.images; let i = index"
+              <div class="image-thumbnails d-flex mt-3 overflow-auto" *ngIf="imageUrls.length > 1">
+                <div *ngFor="let imageUrl of imageUrls; let i = index"
                      class="thumbnail me-2"
                      [class.active]="i === currentImageIndex"
                      (click)="currentImageIndex = i">
-                  <img [src]="image" class="img-thumbnail" alt="Thumbnail">
+                  <img [src]="imageUrl" class="img-thumbnail" alt="Thumbnail">
                 </div>
               </div>
             </div>
