--- a/tablica-frontend/src/app/components/message-box/message-box.component.scss
+++ b/tablica-frontend/src/app/components/message-box/message-box.component.scss
@@ -104,3 +104,11 @@
     font-size: 20px;
   }
 }
+
+.message-content {
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  max-width: 100%;
+}
