--- a/tablica-frontend/src/app/components/offer-list/offer-list.component.html
+++ b/tablica-frontend/src/app/components/offer-list/offer-list.component.html
@@ -82,4 +82,25 @@
       </a>
     </div>
   </div>
+
+  <div *ngIf="!isLoading && totalPages > 1" class="d-flex justify-content-center mt-4 pagination-container">
+    <nav aria-label="Navigation">
+      <ul class="pagination">
+        <li class="page-item" [class.disabled]="pageNumber === 0">
+          <a class="page-link" (click)="changePage(pageNumber - 1)" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index"
+            [class.active]="i === pageNumber">
+          <a class="page-link" (click)="changePage(i)">{{ i + 1 }}</a>
+        </li>
+        <li class="page-item" [class.disabled]="pageNumber === totalPages - 1">
+          <a class="page-link" (click)="changePage(pageNumber + 1)" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </div>
